Created javascript for the menu options. Displaying only those menu items which are selected. For instance, All pizzas will be displayed if pizza option is clicked

--- a/Kanish/index.html
+++ b/Kanish/index.html
@@ -8,11 +8,11 @@
         <article class="order_container">
 
             <nav id="menu_nav" class="order_item">
-                <button class="sub_item">Pizza</button> 
-                <button class="sub_item">Pasta</button> 
-                <button class="sub_item">Sides</button> 
-                <button class="sub_item">Drinks</button> 
-                <button class="sub_item">Meals</button> 
+                <button id="pizza_button" class="sub_item">Pizza</button> 
+                <button id="pasta_button" class="sub_item">Pasta</button> 
+                <button id="sides_button" class="sub_item">Sides</button> 
+                <button id="drinks_button" class="sub_item">Drinks</button> 
+                <button id="meals_button" class="sub_item">Meals</button> 
             </nav>
 
             <section id="pizza" class="order_item">
@@ -226,4 +226,6 @@
 
         </article>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script.js"></script>
 </html>
