created the dynamically functional food cart section with linked add to cart buttons, remove button and purchase button with relevant alerts in invalid purchases and calculating the cart total accordingly using full online_ordering_system.js file coded and added by me in the previous commit. Edited the draft menu card content and checked the functionality of the buttons related to adding,removing and purchasing food items from the cart.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div id="menu_item" class="menu_item">
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">4 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                 3 Large traditional pizzas + 2 sides <br>
                                 Offer Code : 1026437 <br>
@@ -56,7 +56,7 @@
                         <div id="menu_item" class="menu_item">-->
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">5 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                   3 Large traditional pizzas + 2 sides <br>
                                   Offer Code : 1026437 <br>
@@ -82,7 +82,7 @@
                         <div id="menu_item" class="menu_item">
                           <div class="card">
                             <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                            <h3><span class="foodtitle">Pasta Type 1</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                             <p class="food-details">
                               3 Large traditional pizzas + 2 sides <br>
                               Offer Code : 1026437 <br>
@@ -97,7 +97,7 @@
                         <div id="menu_item" class="menu_item">
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">Pasta Type 2</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                 3 Large traditional pizzas + 2 sides <br>
                                 Offer Code : 1026437 <br>
@@ -111,7 +111,7 @@
                         <div id="menu_item" class="menu_item">-->
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">Pasta Type 3</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                   3 Large traditional pizzas + 2 sides <br>
                                   Offer Code : 1026437 <br>
@@ -137,7 +137,7 @@
                         <div id="menu_item" class="menu_item">
                           <div class="card">
                             <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                            <h3><span class="foodtitle">side 1</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                             <p class="food-details">
                               3 Large traditional pizzas + 2 sides <br>
                               Offer Code : 1026437 <br>
@@ -152,7 +152,7 @@
                         <div id="menu_item" class="menu_item">
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">side 2</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                 3 Large traditional pizzas + 2 sides <br>
                                 Offer Code : 1026437 <br>
@@ -166,7 +166,7 @@
                         <div id="menu_item" class="menu_item">-->
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">side 3</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                   3 Large traditional pizzas + 2 sides <br>
                                   Offer Code : 1026437 <br>
@@ -192,7 +192,7 @@
                         <div id="menu_item" class="menu_item">
                           <div class="card">
                             <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                            <h3><span class="foodtitle">drink 1</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                             <p class="food-details">
                               3 Large traditional pizzas + 2 sides <br>
                               Offer Code : 1026437 <br>
@@ -207,7 +207,7 @@
                         <div id="menu_item" class="menu_item">
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">drink 2</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                 3 Large traditional pizzas + 2 sides <br>
                                 Offer Code : 1026437 <br>
@@ -221,7 +221,7 @@
                         <div id="menu_item" class="menu_item">-->
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">drink 3</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                   3 Large traditional pizzas + 2 sides <br>
                                   Offer Code : 1026437 <br>
@@ -247,7 +247,7 @@
                         <div id="menu_item" class="menu_item">
                           <div class="card">
                             <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                            <h3><span class="foodtitle">Meal 1</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                             <p class="food-details">
                               3 Large traditional pizzas + 2 sides <br>
                               Offer Code : 1026437 <br>
@@ -262,7 +262,7 @@
                         <div id="menu_item" class="menu_item">
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">Meal 2</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                 3 Large traditional pizzas + 2 sides <br>
                                 Offer Code : 1026437 <br>
@@ -276,7 +276,7 @@
                         <div id="menu_item" class="menu_item">-->
                             <div class="card">
                               <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                              <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                              <h3><span class="foodtitle">Meal 3</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
                               <p class="food-details">
                                   3 Large traditional pizzas + 2 sides <br>
                                   Offer Code : 1026437 <br>
@@ -289,6 +289,22 @@
                         </div>
 
                     </div>
+                </section>
+
+                <section>
+                  <h2 class="cart-main-heading">CART</h2>
+                  <div class="addtocart-row">
+                    <span class="item-addtocart cart-heading addtocart-column">ITEM</span>
+                    <span class="price-addtocart cart-heading addtocart-column">PRICE</span>
+                    <span class="quantity-addtocart cart-heading addtocart-column">QUANTITY</span>
+                  </div>
+                  <div class="allcartitems">
+                  </div>
+                  <div class="food-total">
+                    <strong class="food-sum-title">Total</strong>
+                    <span class="food-sum-price">$0.00</span>
+                  </div>
+                  <button class="button1 purchase-button" type="button">PURCHASE</button>
                 </section>
             </article>
             <article id="payment" class="payment">
