--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                         <div id="menu_item" class="menu_item">
                           <div class="card">
                             <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
-                            <p class="food-details">
+                            <h3 class="foodname"><span class="foodtitle">3 Large traditional pizzas + 2 sides</span><span class="foodprice">$30.1</span><br> Pick Up Only*</h3>
+                            <span class="food-details" id="moredetails">
                               3 Large traditional pizzas + 2 sides <br>
-                              Offer Code : 1026437 <br>
-                              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
-                            </p>
+                              Conditions apply.Expires on 12-05-2020 <br>
+                            </span>
                             <div class="cardBar cardItem">
                               <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                              <button class="button1" type="button" id="read" onclick="readmore()">VIEW MORE</button>
                             </div>
                           </div>
                         </div>
