Rewamped the content items to make it more user-friendly Added a bit of reponsiveness to the webpage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles/style.css">
         <title>Online Order</title>
+        <meta name="viewport" content="width=device-width initial-scale = 1">
     </head>
     <body>
         <div class="order_parent">
@@ -26,79 +27,101 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/pizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Fannie Bay Special Pizza</span><span class="foodprice">$20.00</span><br></h3>
-                            <span class="food-details">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
+
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Hawaiyan Pizza</span><span class="foodprice">$20.00</span><br></h3>
-                            <span class="food-details">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
                               Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
+
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Peperoni Pizza with</span><span class="foodprice">$20.00</span><br></h3>
-                            <span class="food-details">
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
                               Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
+
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/prawnpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Classic Prawn Pizza</span><span class="foodprice">$20.00</span><br></h3>
-                            <span class="food-details">
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
                               Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
+
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/bbqpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Barbeque Chicken Pizza</span><span class="foodprice">$30.00</span><br></h3>
-                            <span class="food-details">
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
                               Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
+
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/capricepizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname"><span class="foodtitle">Caprice-Tomato base with Ham</span><span class="foodprice">$20.00</span><br></h3>
-                            <span class="food-details">
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
                               Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong> Available for delivery and Pick up</strong><br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
                             </span>
-                            <div class="cardBar cardItem">
-                              <button class="button1 addtocart-btn" type="button">ADD TO CART</button>
+                            <div class="cardBar cardItem card_component">
+                              <button class="button1 addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -160,10 +183,6 @@
                   <div class="food-total">
                     <strong class="food-sum-title">Total</strong>
                     <span class="food-sum-price">$0.00</span>
-                  </div>
-                  <button class="button1 purchase-button" type="button">PURCHASE</button>
-                </section>
-
             </article>
             <article id="payment" class="payment">
                 <h2>Payment Method</h2>
