--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <article class="order_container">
 
                 <nav id="menu_nav" class="menu_nav">
-                    <button id="pizza_button" class="sub_item menu_nav_button">Pizza</button>
-                    <button id="pasta_button" class="sub_item menu_nav_button">Pasta</button>
-                    <button id="sides_button" class="sub_item menu_nav_button">Sides</button>
-                    <button id="drinks_button" class="sub_item menu_nav_button">Drinks</button>
-                    <button id="meals_button" class="sub_item menu_nav_button">Meals</button>
+                    <button id="pizza_button" class="button1 sub_item menu_nav_button">Pizza</button>
+                    <button id="pasta_button" class="button1 sub_item menu_nav_button">Pasta</button>
+                    <button id="sides_button" class="button1 sub_item menu_nav_button">Sides</button>
+                    <button id="drinks_button" class="button1 sub_item menu_nav_button">Drinks</button>
+                    <button id="meals_button" class="button1 sub_item menu_nav_button">Meals</button>
                 </nav>
 
                 <section id="pizza" class="order_item">
@@ -36,7 +36,23 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add</button>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <h3 class="foodname card_component">
+                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
+                            </h3>
+                            <span class="food-details card_component">
+                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$20.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -53,7 +69,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -70,7 +86,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -87,7 +103,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -104,24 +120,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
-                            </div>
-                          </div>
-                        </div>
-
-                        <div id="menu_item" class="menu_item">
-                          <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
-                            <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong>Available for delivery and Pick up</strong><br><br>
-                              <span class="foodprice card_component">$20.00</span><br>
-                            </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="button1 addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -171,18 +170,26 @@
                     </div>
                 </section>
 
-                <section>
-                  <h2 class="cart-main-heading">CART</h2>
-                  <div class="addtocart-row">
-                    <span class="item-addtocart cart-heading addtocart-column">ITEM</span>
-                    <span class="price-addtocart cart-heading addtocart-column">PRICE</span>
-                    <span class="quantity-addtocart cart-heading addtocart-column">QUANTITY</span>
+                <section id="cart">
+
+                  <div class="cart_summary">
+                    <h2 class="cart-main-heading">CART</h2>
+                    <button id="view_cart" class="button1 view_cart">View Cart</button>
                   </div>
-                  <div class="allcartitems">
+
+                  <div id="cart_contents" class="cart_contents">
+                    <div class="addtocart-row">
+                      <span class="item-addtocart cart-heading addtocart-column">Item</span>
+                      <span class="price-addtocart cart-heading addtocart-column">Price</span>
+                      <span class="quantity-addtocart cart-heading addtocart-column">Quantity</span>
+                    </div>
+                    <div class="allcartitems">
+                    </div>
+                    <div class="food-total">
+                      <strong class="food-sum-title">Total</strong>
+                      <span class="food-sum-price">$0.00</span>
                   </div>
-                  <div class="food-total">
-                    <strong class="food-sum-title">Total</strong>
-                    <span class="food-sum-price">$0.00</span>
+                </section>
             </article>
             <article id="payment" class="payment">
                 <h2>Payment Method</h2>
@@ -236,14 +243,14 @@
 
             <div id="status_bar" class="order_status_bar">
 
-                <button id="order_back_button" class="order_time">Back</button>
-                <button id="order_next_button" class="order_time">Next</button>
+                <button id="order_back_button" class="button1 order_time">Back</button>
+                <button id="order_next_button" class="order_time button1">Next</button>
 
-                <button id="payment_back_button" class="payment_time">Back</button>
-                <button id="payment_next_button" class="payment_time">Next</button>
+                <button id="payment_back_button" class="button1 payment_time">Back</button>
+                <button id="payment_next_button" class="button1 payment_time">Next</button>
 
-                <button id="confirmation_back_button" class="confirmation_time">Back</button>
-                <button id="confirmation_next_button" class="confirmation_time">Next</button>
+                <button id="confirmation_back_button" class="button1 confirmation_time">Back</button>
+                <button id="confirmation_next_button" class="button1 confirmation_time">Next</button>
 
 
             </div>
