edited the number of columnc in each food item to make the mobile version readable and user friendly

--- a/index.html
+++ b/index.html
@@ -28,26 +28,8 @@
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
-                            <span class="food-details card_component">Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong>Available for delivery and Pick up</strong><br><br>
-                              <span class="foodprice card_component">$20.00</span><br>
-                            </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                          </div>
-                        </div>
-
-                        <div id="menu_item" class="menu_item">
-                          <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
                             <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
@@ -60,11 +42,8 @@
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
                             <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
@@ -77,11 +56,8 @@
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
                             <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
@@ -94,28 +70,8 @@
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
                             <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong>Available for delivery and Pick up</strong><br><br>
-                              <span class="foodprice card_component">$20.00</span><br>
-                            </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
-                          </div>
-                        </div>
-
-                        <div id="menu_item" class="menu_item">
-                          <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
-                            <h3 class="foodname card_component">
-                              <span class="foodtitle card_component">Hawaiyan Pizza</span><br><br>
-                            </h3>
-                            <span class="food-details card_component">
-                              Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
