--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="styles/style.css">
         <title>Online Order</title>
         <meta name="viewport" content="width=device-width initial-scale = 1">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="order_parent">
+          <article class="site-navigation">
+              <header>
+                <a href="#" class="logo">Fannie Bays</a>
+                <div class="navigation-toggle"></div>
+                <nav class="sitenavigation">
+                  <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="active">Order Online</a></li>
+                    <li><a href="#">Booking Reservation</a></li>
+                    <li><a href="#">Catering</a></li>
+                    <li><a href="#">More Options</a></li>
+                  </ul>
+                </nav>
+                <div class="clearfix"></div>
+              </header>
+            </article>
             <article class="order_container">
 
                 <nav id="menu_nav" class="menu_nav">
@@ -210,10 +228,11 @@
 
 
             </div>
+
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
-    <script src="scripts/online_ordering_system.js" type="text/javascript"></script>
+    <script src="scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
 
 </html>
