Edited the content description/images in a navigation section matching to the redeveloping site real content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <div class="navigation-toggle"></div>
                 <nav class="sitenavigation">
                   <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#" class="active">Order Online</a></li>
-                    <li><a href="#">Booking Reservation</a></li>
-                    <li><a href="#">Catering</a></li>
-                    <li><a href="#">More Options</a></li>
+                    <li><a href="#homepagelink">Home</a></li>
+                    <li><a href="#onlineorderpagelink" class="active">Order Online</a></li>
+                    <li><a href="#bookingreservationlink">Booking Reservation</a></li>
+                    <li><a href="#cateringpagelink">Catering</a></li>
+                    <li><a href="#moreoptionslink">More Options</a></li>
                   </ul>
                 </nav>
                 <div class="clearfix"></div>
@@ -47,54 +47,54 @@
                           <div class="food_item">
                             <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
-                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Base with Ham, Pineappple and Mozzarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
                             </div>
                           </div>
                         </div>
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
-                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Pepperoni Pizza</span><br><br>Tomato Base with Pepperoni and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
                             </div>
                           </div>
                         </div>
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/bbqpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
-                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
-                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodname foodtitle">BBQ Chicken Pizza</span><br><br>BBQ Base with Chicken and Mozarella<br>
+                              <strong>Available for Pick up only</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
                             </div>
                           </div>
                         </div>
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/prawnpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
-                              <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Large Base with Chicken, Capsicum, Anchobies and Mozarella<br>
+                              <span class="foodname foodtitle">Garlic Prawn Pizza</span><br><br>Garlic Butter Base, prawns, fetta, shallots, aioli and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
-                              <span class="foodprice card_component">$20.00</span><br>
+                              <span class="foodprice card_component">$24.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
                             </div>
                           </div>
                         </div>
